--- a/notebooks/5.2_RVL_CDIP_LGBM.ipynb
+++ b/notebooks/5.2_RVL_CDIP_LGBM.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1e5ffdeb-38e1-4e74-87eb-5125373c07f0",
+   "metadata": {},
+   "source": [
+    "# LGBM avec les meilleurs paramètres, lancé sur l'ensemble des images (400 000)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2119e67c-6b6d-48ed-97f5-22cc64d5dfe4",
@@ -23,7 +31,7 @@
     "from skopt.space import Categorical, Real, Integer\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from lightgbm import LGBMClassifier\n",
-    "\n",
+    "import joblib\n",
     "import time"
    ]
   },
@@ -42,7 +50,7 @@
     "    sys.path.append(str(project_root))\n",
     "\n",
     "from src import PATHS\n",
-    "from src.visualization.visualize import plot_spider_graph"
+    "from src.visualization.visualize import draw_spider_graph_dark, conf_matrix_dark"
    ]
   },
   {
@@ -57,31 +65,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6703c459-c79a-408b-bf4f-2b191fab436d",
+   "id": "348e71a0-27db-4e0a-a393-8697a0cbe664",
    "metadata": {},
    "source": [
-    "## pour ne travailler que sur un échantillon :"
+    "## création des sets train, test et validation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9a75a1-cf0f-4445-bfc2-3eba8377bb59",
+   "id": "87466d6c-b6f1-4ca8-bee0-5b6abfa3cf74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = pd.read_parquet(os.path.join(PATHS.data,'metadata', \"samples\", 'df_documents_sample_4k_3.parquet'), engine='fastparquet')\n",
-    "sample = sample.drop(columns=['filename', 'rvl_image_path', 'label', 'data_set',\n",
-    "       'iit_image_path', 'iit_individual_xml_path', 'iit_collective_xml_path'])\n",
-    "df = pd.merge(df_all, sample)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "348e71a0-27db-4e0a-a393-8697a0cbe664",
-   "metadata": {},
-   "source": [
-    "## création des sets train, test et validation"
+    "df=df_all.drop(columns=[\"document_id\", \"path\",  \"file_path\", 'relative_path', 'filename'])\n"
    ]
   },
   {
@@ -199,10 +196,48 @@
     "clf.fit(X_train_pca, y_train)\n",
     "y_pred = clf.predict(X_test_pca)\n",
     "\n",
+    "end_time = time.time()\n",
+    "elapsed = end_time - start_time\n",
+    "print(f\" Temps d'exécution total : {elapsed / 60:.2f} minutes ({elapsed:.1f} secondes)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119ec31e-cb65-442f-af27-34f81bb4a545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Juste le meilleur modèle entraîné\n",
+    "joblib.dump(clf, 'best_lgbm_model_all_images.pkl')\n",
+    "\n",
+    "# Recharger plus tard\n",
+    "final_model = joblib.load('best_lgbm_model_all_images.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9368888-1b12-4ddc-a1c9-45295442dfba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = final_model.predict(X_test_pca)\n",
+    "cm = confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b230ef2-f231-461a-9a38-cb744a18da3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "print(\"\\n Rapport de classification :\")\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
     "plt.title(\"Matrice de confusion\")\n",
@@ -216,12 +251,37 @@
     "print(report_df.head(16))  # Affiche les 16 classes\n",
     "print('')\n",
     "print('###############################')\n",
-    "end_time = time.time()\n",
-    "elapsed = end_time - start_time\n",
-    "print(f\" Temps d'exécution total : {elapsed / 60:.2f} minutes ({elapsed:.1f} secondes)\")\n",
     "\n",
-    "#Remarque : le set de validation servirait à tester l'algo final qui aurait déjà vu X_train et X_test. Il ne sert pas ici. "
+    "#Remarque : le set de validation servirait à tester l'algo final qui aurait déjà vu X_train et X_test. Il ne sert pas ici. a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d9818c5-495b-4468-b3e4-1e86048aff64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_matrix_dark(cm, \"illustrations/lgbm_cm_all_images.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "339c14e8-dde6-492e-ace6-c3eec66414d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_spider_graph_dark(y_test, y_pred, save_path=\"illustrations/lgbm_spider_all_images.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67935717-aa30-4830-953e-4e5ebc4f4449",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
