refined grid search in mlp text

--- a/notebooks/6.3-txt-DL.ipynb
+++ b/notebooks/6.3-txt-DL.ipynb
@@ -328,6 +328,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "N_SAMPLES = 20000\n",
+    "\n",
+    "X_train_vect_sampled = vectorizer.transform(X_train.sample(N_SAMPLES))\n",
+    "y_train_sampled = y_train.sample(N_SAMPLES)\n",
+    "\n",
+    "\n",
     "param_grid = {\n",
     "    'hidden_layer_sizes': [(100,), (128,), (100, 50), (128, 64)],\n",
     "    'activation': ['relu', 'tanh'],\n",
@@ -336,8 +342,9 @@
     "}\n",
     "\n",
     "grid = GridSearchCV(MLPClassifier(max_iter=50, random_state=42), param_grid, cv=3, scoring='accuracy', verbose=2)\n",
-    "# Attention: pour des max_iter a 50: environ 10' par fit x 3 cv x (4 x 2 x 3 x 2 = 48) params -> 1440' = 24 heures\n",
-    "grid.fit(X_train_vect, y_train)\n",
+    "# Attention: sur 400K images, pour des max_iter a 50: environ 10' par fit x 3 cv x (4 x 2 x 3 x 2 = 48) params -> 1440' = 24 heures\n",
+    "#            Réduction à 20K images ==> environ 35\" par fit ==> 1 heure 30 en tout\n",
+    "grid.fit(X_train_vect_sampled, y_train_sampled)\n",
     "\n",
     "print(\"Meilleurs paramètres :\", grid.best_params_)\n"
    ]
@@ -349,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Meilleurs paramètres : {'activation': 'relu', 'alpha': 0.01, 'hidden_layer_sizes': (128, 64), 'learning_rate': 'constant'}"
+    "# Meilleurs paramètres : {'activation': 'tanh', 'alpha': 0.0001, 'hidden_layer_sizes': (128,), 'learning_rate': 'constant'} # determinés avec jeu de données 20K"
    ]
   },
   {
@@ -359,14 +366,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "third_mlp = MLPClassifier(hidden_layer_sizes=(128,64), max_iter=100, random_state=42, activation='relu', alpha=0.01)\n",
+    "third_mlp = MLPClassifier(hidden_layer_sizes=(128,), max_iter=300, random_state=42, activation='tanh', alpha=0.0001, learning_rate='constant')\n",
     "third_mlp.fit(X_train_vect, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974e7baf-a753-4b7a-bb26-c9d375f39c9c",
+   "id": "0922be5c-3a9c-4965-a61d-76de433bd2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,6 +426,14 @@
    "source": [
     "joblib.dump(third_mlp, PATHS.models / \"txt_mlp3.joblib\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd2a06ff-af65-43e8-8343-18e5619ceb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
